k8s/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
     labels:
       app: frontend
    spec:
      containers:
        - name: frontend
          image: straxseller/frontend:v0.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
